# cmaketesting

./: README.md
test1/: CMakeLists.txt  helloworld.cpp
test2/: CMakeLists.txt  helloworld.cpp  printmsg.cpp
test3/: CMakeLists.txt
test3/libprint/: printmsg.cpp
test4/: CMakeLists.txt  helloworld.cpp
test4/libprint/: CMakeLists.txt
